--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,7 @@ description: > # this means to ignore newlines until "baseurl:"
  Learn. Unlearn. Relearn.
 # baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://femgeekz.github.io" # the base hostname & protocol for your site
+author: Swathi Venkatachala    
 twitter_username: idevnull
 github_username:  SwathiMystery
 
