--- a/_config.yml
+++ b/_config.yml
@@ -8,6 +8,7 @@ url: "http://femgeekz.github.io" # the base hostname & protocol for your site
 author: Swathi Venkatachala    
 twitter_username: idevnull
 github_username:  SwathiMystery
+safe: true
 
 # Build settings
-markdown: kramdown
+markdown: kramdown    
